# target-qdrant

./: LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
target_qdrant/: __init__.py  __main__.py  qdrant.py  sinks.py  target.py
tests/: __init__.py  test_core.py
