[tool.poetry]
name = "target-qdrant"
version = "0.0.1"
description = "`target-qdrant` is a Singer target for Qdrant, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Rares Petruc <rareson168@gmail.com>"]
keywords = [
    "ELT",
    "Qdrant",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8"
singer-sdk = { version="~=0.37.0" }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.32.0"
qdrant_client = "1.9.1"
openai = "1.35.5"
psycopg2-binary = "2.9.9"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.37.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
src = ["target_qdrant"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["target_qdrant"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-qdrant = 'target_qdrant.target:TargetQdrant.cli'
